--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
    	font-family:sans-serif;
 	margin-top: 2.0em;
 	margin-right: 5.0em;
-	margin-left: 5.0em;
+	margin-left: 150px;
 	padding:0px;
 	background:white;
 	height:100%;
@@ -202,5 +202,36 @@ a:hover {
 	color:#005500; 
 	background-color:transparent; 
 	text-decoration:underline;
+}
+
+.sidenav {
+    width: 130px;
+    position: fixed;
+    z-index: 1;
+    top: 20px;
+    left: 10px;
+    background: #eee;
+    overflow-x: hidden;
+    padding: 8px 0;
+}
+
+.sidenavsub {
+    background: white;
+    font-size:smaller;
+    width: 120px;
+    left: 5px;
+    position:relative;
+}
+
+.sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: large;
+    color: #005500;
+    display: block;
+}
+
+.sidenav a:hover {
+    color: gray;
 }
 
