--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
 	/*font-size:small;*/
    	font-family:sans-serif;
 	margin-top: 2.0em;
-	margin-right: 5.0em;
+	margin-right: 140px;
 	margin-left: 150px;
 	padding:0px;
 	background:white;
