--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -231,6 +231,7 @@ a:hover {
     overflow-x: hidden;
     padding: 8px 0;
     text-align:left;
+    border-radius: 10px;
 }
 
 .sidenavsub {
@@ -238,7 +239,8 @@ a:hover {
     width: 120px;
     left: 5px;
     position:relative;
-    text-align:left
+    text-align:left;
+    border-radius: 5px;
 }
 
 .sidenav a {
@@ -271,7 +273,10 @@ a:hover {
 
 #inner-page {
   text-align: left;
-  margin: 0px 10px 0px 140px; 
+  margin: 0px 10px 0px 145px; 
 }
 
+#rounded {
+    border-radius: 10px;
+}
 
