--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,7 +274,13 @@ a:hover {
 
 #inner-page {
   text-align: left;
-  margin: 0px 8px 0px 145px; 
+  margin: 0px 8px 0px 145px;
+
+  img{
+        max-width: 100%;
+        max-height: 100%;
+        display: block; /* remove extra space below image */
+    }
 }
 
 #rounded {
