--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ table {
 img{
         max-width: 100%;
         max-height: 100%;
-        display: block; /* remove extra space below image */
+        //display: block; /* remove extra space below image */
 }
 
 img.eight {
